# agent-sim

./: .gitignore  2-agent Simulation.ipynb  Agent Testing.ipynb  LICENSE  Makefile  README.md  Simulation Examples.ipynb  Simulation.ipynb  pyproject.toml
agent_sim/: agent.py  player.py  prompts_library.py  simulation.py
components/: agent.py  model.py  prompts_library.py
models/modal_falcon_40b/: model.py
